调整侧边栏文字溢出

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/index.css">
 </head>
-<body id="home">
+<body>
 	<a href="#" id="book" title="Responsive web">This is a fictional case study website for the book 'Responsive Web Design with HTML5 and CSS3'</a>
 
 	<div id="wrapper"> 
